--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
-	"main": "main.js",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"devDependencies": {
-		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
-		"obsidian": "latest",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
-	}
+    "name": "crude-csv",
+    "version": "1.0.0",
+    "description": "(C)reate, (R)ead, (U)pdate, (D)elete, (E)dit CSV files in a spreadsheet interface within Obsidian. Crude, right?!",
+    "main": "main.js",
+    "scripts": {
+        "dev": "node esbuild.config.mjs",
+        "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+        "version": "node version-bump.mjs && git add manifest.json versions.json"
+    },
+    "keywords": [
+        "excel",
+        "csv",
+        "spreadsheet",
+        "table"
+    ],
+    "author": "github.com/shugga",
+    "license": "unlicense",
+    "devDependencies": {
+        "@types/node": "^24.3.0",
+        "@typescript-eslint/eslint-plugin": "^8.41.0",
+        "@typescript-eslint/parser": "^8.41.0",
+        "builtin-modules": "^5.0.0",
+        "esbuild": "^0.25.9",
+        "obsidian": "^1.4.16",
+        "tslib": "^2.8.1",
+        "typescript": "^5.9.2"
+    }
 }
